Fix vertical alignment and label/checkbox spacing

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/domain-transfer-domains/styles.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/domain-transfer-domains/styles.scss
@@ -414,6 +414,8 @@
 
 			.form-checkbox + span {
 				display: inline;
+				margin-left: 0.5rem;
+				vertical-align: middle;
 			}
 
 			@media (max-width: $break-medium ) {
